# lib_spatialite

./: .gitignore  CMakeLists.txt  config-msvc.h
cmake/: FindAnyProject.cmake  FindExtFreexl.cmake  FindExtLibLZMA.cmake  FindExtProject.cmake  FindExtQt4.cmake  FindExtSQLite3.cmake  FindGEOS.cmake  PackageConfig.cmake.in  config.h.cmake.in  configure.cmake  gaiaconfig-msvc.h.cmake.in  gaiaconfig.h.cmake.in  util.cmake
opt/: folders.csv
qt4/: CMakeLists.txt  main.cpp  qgsslconnect.cpp  qgsslconnect.h
qt5/: CMakeLists.txt  qgsspatialiteutils.cpp  qgsspatialiteutils.h  qgssqliteutils.h
src/: CMakeLists.txt
src/connection_cache/: CMakeLists.txt  alloc_cache.c
src/control_points/: CMakeLists.txt
src/dxf/: CMakeLists.txt
src/gaiaaux/: CMakeLists.txt  gg_sqlaux.c
src/gaiaexif/: CMakeLists.txt  gaia_exif.c
src/gaiageo/: CMakeLists.txt  gg_extras.c  gg_shape.c  gg_transform.c
src/geopackage/: CMakeLists.txt  gaia_cvt_gpkg.c  geopackage_internal.h  gpkgCreateTilesTable.c  gpkg_add_tile_triggers.c  gpkg_get_normal_row.c  gpkg_get_normal_zoom.c
src/headers/: CMakeLists.txt  spatialite.h  spatialite_private.h
src/md5/: CMakeLists.txt
src/shapefiles/: CMakeLists.txt  shapefiles.c
src/spatialite/: CMakeLists.txt  statistics.c
src/srsinit/: CMakeLists.txt
src/stored_procedures/: stored_procedures.c
src/topology/: CMakeLists.txt  gaia_auxtopo.c
src/virtualtext/: CMakeLists.txt
src/wfs/: CMakeLists.txt
test/: CMakeLists.txt  check_add_tile_triggers.c  check_add_tile_triggers_bad_table_name.c  check_bufovflw.c  check_clone_table.c  check_control_points.c  check_create.c  check_createBaseTables.c  check_cutter.c  check_dbf_load.c  check_drop_rename.c  check_dxf.c  check_extension.c  check_fdo1.c  check_fdo3.c  check_gaia_utf8.c  check_geometry_cols.c  check_geoscvt_fncts.c  check_get_normal_row.c  check_get_normal_row_bad_geopackage.c  check_get_normal_row_bad_geopackage2.c  check_get_normal_zoom.c  check_get_normal_zoom_bad_geopackage.c  check_get_normal_zoom_bad_geopackage2.c  check_get_normal_zoom_extension_load.c  check_gpkgConvert.c  check_gpkgCreateFeaturesTable.c  check_gpkgCreateTilesTable.c  check_gpkgCreateTilesZoomLevel.c  check_gpkgGetImageFormat.c  check_gpkgGetImageFormat_png.c  check_gpkgGetImageFormat_tiff.c  check_gpkgGetImageFormat_webp.c  check_gpkgInsertEpsgSRID.c  check_gpkgMode.c  check_gpkgVirtual.c  check_init2.c  check_init_full.c  check_libxml2.c  check_map_config.c  (+54 more)
test/shp/: ReadMe.txt
